# openapi-schemas/organizational-changes-openapi.yaml
@@ -46,6 +46,8 @@ paths:
                   type: string
                   format: base64
       responses:
+        "202":
+          description: "Request for uploaded Accepted and processing"
         "200":
           description: OK
         "400":
@@ -176,8 +178,26 @@ paths:
                   type: string
                   format: base64
       responses:
+        '202':
+          description: Request to upload file has been succesfully.   Response contains operational url to poll for upload status.
+
+  /operations/load/{requestid}:
+    get:
+      description: Pollable end-point to check the status of the load
+      operationId: "operationsLoadingStatus"
+      parameters:
+        - in: path
+          name: requestid
+          schema:
+            type: string
+          required: true
+      responses:
         '200':
           description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/addEmployeeLoadStatus"
 
 components:
   schemas:
@@ -310,3 +330,22 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/employee"
+
+    addEmployeeLoadStatus:
+      type: object
+      properties:
+        resourceLocation:
+          type: string
+        requestId:
+          type: string
+        createdDateTime:
+          type: string
+        completedDateTime:
+          type: string
+        entriesProgressed:
+          type: integer
+        status:
+          type: string
+          enum: [processing, complete, error]
+        error:
+          type: string
